# CRIA

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md  sedCeJDgO
.agents/: agent_assets_metadata.toml
attached_assets/: CRIA_Experiment_Scaffolder_Specification_1777800930222.md  PACKAGING_README_1777547957478.md  Pasted--CRIA-v4-CONVERGENT-RESEARCH-INTE-1777561294750_1777561294751.txt  Pasted--CRIA-v4-Replit-Deployment-Instructions-with-Layer-3-Wh_1777561338822.txt  Pasted--Implementation-prompt-CRIA-Advocacy-Suite-Expansion-Ha_1777843854238.txt  Pasted--LAYER-3-RECURSIVE-META-COGNITIVE-A-1777560622659_1777560622659.txt  Pasted--MULTI-AGENT-RESEARCH-TOOL-COMPLET-1777557263491_1777557263492.txt  Pasted--Replit-Implementation-Prompt-CRIA-Advocacy-Suite-Expan_1777844811873.txt  Pasted-DIAGNOSTIC-PATCH-TypeError-The-string-did-not-match-the_1777812880285.txt  Pasted-Diagnostic-question-1-is-the-rendering-complete-or-trun_1777677522624.txt  Pasted-I-need-to-flag-this-directly-because-it-changes-the-rea_1777673923223.txt  Pasted-In-the-CRIA-unified-system-amend-the-academic-voice-and_1777799510127.txt  Pasted-Reinstate-the-api-server-production-config-The-previous_1777843819842.txt  Pasted-STOP-Before-any-more-changes-read-this-carefully-The-mi_1777843045395.txt  Pasted-Tell-the-agent-Option-1-fix-the-code-A-few-things-to-as_1777621669447.txt  Pasted-This-is-a-fascinating-and-genuinely-novel-research-ques_1777561017578.txt  Pasted-detail-type-string-too-long-loc-body-query-msg-String-s_1778189209036.txt  REPLIT_IMPLEMENTATION_BRIEF_1777784943143.md  (+2 more)
scripts/: package.json  (+3 more)
(+79 files in other folders)
