[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "beautifulsoup4==4.12.2",
    "fastapi==0.104.1",
    "httpx==0.25.1",
    "lxml==4.9.3",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "uvicorn==0.24.0",
]
